# remote_ipykernel

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
remote_ipykernel/: __main__.py  manage.py
